Changes "Modrinth" to "Knossos" with the help of ChatGPT.

--- a/assets/styles/global.scss
+++ b/assets/styles/global.scss
@@ -158,10 +158,10 @@ html {
   --color-special-purple: #c78aff;
   --color-special-gray: #9fa4b3;
 
-  --color-brand-green: #1bd96a;
+  --color-brand-green: #EC3017;
   --color-brand: var(--color-brand-green);
-  --color-brand-highlight: rgba(27, 217, 106, 0.25);
-  --color-brand-shadow: rgba(27, 217, 106, 0.7);
+  --color-brand-highlight: #FF7C4B;
+  --color-brand-shadow: #800600;
   --color-brand-inverted: #000;
 
   --tab-underline-hovered: #414146;
