--- a/assets/styles/global.scss
+++ b/assets/styles/global.scss
@@ -19,10 +19,10 @@ html {
   --color-text-inverted: var(--color-bg);
   --color-bg-inverted: var(--color-text);
 
-  --color-brand-green: #00af5c;
+  --color-brand-green: #EC3017;
   --color-brand: var(--color-brand-green);
-  --color-brand-highlight: rgba(0, 175, 92, 0.25);
-  --color-brand-shadow: rgba(0, 175, 92, 0.7);
+  --color-brand-highlight: #FF7C4B;
+  --color-brand-shadow: #800600;
   --color-brand-inverted: #ffffff;
 
   --tab-underline-hovered: #e2e8f0;
